--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -430,56 +430,20 @@ padding: 35px 100px 20px;
 
 }
 
-/* Our Work Section */
-
-.оur-work {
-    background-color: #fff;
-}
-
-.our-work .grid li {
-    padding: 20px;
-    height: 350px;
-    border-radius: 3px;
-
-    background-clip: content-box;
-    background-size: cover;
-    background-position: center;
-    background-color: #333;
-}
-
-.our-work .grid li.small {
-    flex-basis: 40%;
-}
-
-.our-work .grid li.large {
-    flex-basis: 60%;
-}
-
-
-@media (max-width: 1000px) {
-
-    .our-work .grid li.small,
-    .our-work .grid li.large {
-        flex-basis: 100%;
-    }
-
-}
-
-
-
 /* Descubre section styling */
-
 .descubre{
-    padding-top: 30px;
-    padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+
 }
 
 .descubre-descubre {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 0px 30px 0px;
-    margin: 0;
+    padding: 30px;
 }
 
 .descubre-text {
@@ -535,6 +499,7 @@ padding: 35px 100px 20px;
     display: flex;
     flex-direction: column;
     width: 100%;
+	align-items:center;
 }
 
 .descubre-text02,
@@ -552,17 +517,8 @@ padding: 35px 100px 20px;
     margin-bottom: 10px;
 }
 
-.primeraFila,.segundaFila{
-    display:flex;
-}
 
-@media (max-width: 1000px) {
-    .primeraFila,.segundaFila{
-        flex-direction: column;
-        align-self: center;
-        align-items: center;
-    }
-}
+
 
 /* Seccion Aliados */
 
@@ -592,7 +548,12 @@ padding: 35px 100px 20px;
     border-radius: 5%;
     height:250px;
     width:30%;
-    
+	overflow: hidden;
+    /* Set dimensions of the container */
+    width: 450px;
+    height: 300px;
+    align-items: center;
+    padding:20px;
     position:relative;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -652,7 +613,19 @@ padding: 35px 100px 20px;
     background-image: url("../images/pictures/tours.png");
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1000px){
+    .cardAliado {
+        width: 100%;
+        margin-top:20px;
+		height: 200px;
+		align-items: center;
+		position:relative;
+		justify-content: space-between;
+    }
+
+}
+
+@media (max-width: 800px) {
 
     .espacioAliados {
         flex-direction: column;
@@ -660,11 +633,108 @@ padding: 35px 100px 20px;
 
     .cardAliado {
         width: 100%;
-        height: 200px;
         margin-top:20px;
+		height: 400px;
+		align-items: center;
+		position:relative;
+		justify-content: space-between;
     }
 
 }
+
+/* Global styles for the Testimonials section */
+.testimonials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #F7E9E9;
+}
+
+.testimonials-text {
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    color: #2D9731;
+}
+
+.testimonials-testimonials {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  width: 80%;
+  padding:0px;
+  max-width: 1000px;
+  margin: 100px;
+  align-items: center;
+
+}
+
+/* Styles for individual testimonial cards */
+.testimonials-testimonialscarditem6,
+.testimonials-testimonialscarditem61 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 45%;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Styles for the container */
+.testimonial-person,.testimonial-person1 {
+    position: relative;
+    overflow: hidden;
+    /* Set dimensions of the container */
+    width: 200px;
+    height: 300px;
+    align-items: center;
+
+}
+
+/* Styles for the image */
+.testimonial-person img,.testimonial-person1 img {
+    display: block;      /* Remove any default spacing */
+    width: 100%;         /* Set width to fill the container */
+    height: 100%;        /* Set height to fill the container */
+    object-fit: cover;   /* Ensure image covers the container while maintaining its aspect ratio */
+    margin: 0 auto; 
+}
+
+.testimonials-cardcontent,
+.testimonials-cardcontent1 {
+  text-align: center;
+}
+
+.testimonials-text02,
+.testimonials-text08 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.testimonials-text04,
+.testimonials-text10 {
+  font-size: 16px;
+  color: #888;
+  margin-bottom: 10px;
+}
+
+.testimonials-stars,
+.testimonials-stars1 {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.testimonials-text06,
+.testimonials-text12 {
+  font-size: 16px;
+}
+
 
 /* Services Section */
 
@@ -925,12 +995,6 @@ color: #2D9731;
     align-self: center;
 }
 
-@media (max-width: 1000px){
-    .iconosRedes{
-        justify-content: center;
-    }
-}
-
 /* TOS Section */
 
 .tos {
@@ -959,5 +1023,7 @@ color: #2D9731;
 @media (max-width: 800px) {
     .tos,.mainTos hgroup {
         flex-direction: column;
+		align-items: center;
+		position:relative;
     }
 }
