--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -63,6 +63,7 @@ a.btn {
     font-weight: 300;
     padding: 10px;
     margin-right: 30px;
+    font-weight: bold;
 }
 
 a.btn2 {
@@ -78,6 +79,7 @@ a.btn2 {
     margin-right: 80px;
     font-size: large;
     font-family: 'Inter', sans-serif;
+    font-weight: bold;
 }
 hr {
     width: 150px;
@@ -147,6 +149,7 @@ section h3.title {
     font-family: 'Inter', sans-serif;
     margin-bottom: 35px;
     text-align: center;
+    font-weight: bold;
 }
 
 section p {
@@ -204,7 +207,8 @@ h2 {
 }
 
 header h2 {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Norican';
+    font-weight: bold;
 }
 header .background-image {
     position: absolute;
@@ -666,88 +670,6 @@ padding: 35px 100px 20px;
 
 }
 
-/* Global styles for the Testimonials section */
-.testimonials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background-color: #F7E9E9;
-  }
-  .testimonials-text {
-      margin-bottom: 20px;
-      font-size: 24px;
-      font-weight: bold;
-      text-align: center;
-      color: #2D9731;
-  }
-  .testimonials-testimonials {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    width: 80%;
-    padding:0px;
-    max-width: 1000px;
-    margin: 100px;
-    align-items: center;
-  }
-  /* Styles for individual testimonial cards */
-  .testimonials-testimonialscarditem6,
-  .testimonials-testimonialscarditem61 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 45%;
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  /* Styles for the container */
-  .testimonial-person,.testimonial-person1 {
-      position: relative;
-      overflow: hidden;
-      /* Set dimensions of the container */
-      width: 200px;
-      height: 300px;
-      align-items: center;
-  }
-  /* Styles for the image */
-  .testimonial-person img,.testimonial-person1 img {
-      display: block;      /* Remove any default spacing */
-      width: 100%;         /* Set width to fill the container */
-      height: 100%;        /* Set height to fill the container */
-      object-fit: cover;   /* Ensure image covers the container while maintaining its aspect ratio */
-      margin: 0 auto; 
-  }
-  .testimonials-cardcontent,
-  .testimonials-cardcontent1 {
-    text-align: center;
-  }
-  .testimonials-text02,
-  .testimonials-text08 {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  .testimonials-text04,
-  .testimonials-text10 {
-    font-size: 16px;
-    color: #888;
-    margin-bottom: 10px;
-  }
-  .testimonials-stars,
-  .testimonials-stars1 {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-  }
-  .testimonials-text06,
-  .testimonials-text12 {
-    font-size: 16px;
-  }
-  
-
 /* Services Section */
 
 .services {
@@ -1043,3 +965,804 @@ color: #2D9731;
         flex-direction: column;
     }
 }
+
+/* GAMIFICACION*/
+
+.gamificacion{
+    padding: 0px 0px;
+    background-color: #f7f7f7;
+    color: #2D9731;
+    display: block;
+    text-align: center;
+    
+    height:500px;
+    width: 100%;
+}
+
+.tituloGami{
+    position: relative;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    overflow: hidden;
+    width: 100%;
+    height:160px;
+}
+
+
+
+.tituloGami .decoGami{
+    position: absolute;
+    left:-20px;
+    width: 105%;
+    top: -30px;
+    background-color: #388E3C;
+}
+
+.tituloGami .decoGami:nth-child(1){
+    background-color: #388E3C;
+    transform: rotate(2deg);
+    height: 160px;
+    top: -50px;
+    z-index: 2;
+}
+
+.tituloGami .decoGami:nth-child(2){
+    background-color: #40BB15;
+    transform: rotate(-1deg);
+    height: 160px;
+    z-index: 1;
+}
+
+.headerGami{
+    position: absolute;
+    z-index: 3;
+    color:#f7f7f7;
+    top: 0px;
+    width: 100%;
+    font-weight: bold;
+    justify-self: center;
+}
+
+
+
+.descGami{
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+    font-weight: normal;
+    color:#f7f7f7;
+    top: 40px;
+}
+
+.containerCardsGami{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:5%;
+}
+
+.imgCardGami{
+    height: 230px;
+    width: 100%;
+    border-radius: 5%;
+}
+
+.cardGami{
+    width: 250px;
+    height: 300px;
+    border: #d1d1d1 2px solid;
+    border-radius: 5%;
+}
+
+.pieCardGami{
+    display: flex;
+    align-items: center;
+    height: 60px;
+}
+
+
+
+.cardGami h3{
+    padding-top: 0px;
+ font-size: small;
+ width: 70%;
+}
+
+.cardGami a{
+    background-color: #388E3C;
+    color:#f7f7f7;
+    width: 20%;
+    margin-left: 5%;
+    font-size: x-small;
+    font-weight: bold;
+    justify-self: flex-end;
+    border-radius: 10%;
+    padding: 5px;
+}
+
+@media (max-width: 1000px) {
+    .gamificacion{
+        height:1150px;
+    }
+      
+    .containerCardsGami{
+        flex-direction: column;
+    }
+
+    .cardGami{
+        margin-bottom: 20px;
+    }
+
+}
+
+/* TESTIMONIOS */
+
+.testi{
+    padding: 0px 0px;
+    background-color: #f7f7f7;
+    color: #2D9731;
+    display: block;
+    text-align: center;
+    height:450px;
+}
+
+.testi h2{
+    font-weight: bold;
+}
+
+.containerTesti{
+    position: relative;
+    display: flex;
+    height:400px;
+    justify-content: center;
+    align-items: center;
+    gap:5%;
+}
+
+@media (max-width: 1000px) {
+    .containerTesti .cardTesti:nth-child(3) {
+        display: none;
+    }
+}
+
+@media (max-width: 700px) {
+    .containerTesti .cardTesti:nth-child(3) {
+        display: none;
+    }
+
+    .containerTesti .cardTesti:nth-child(1) {
+        display: none;
+    }
+}
+
+.cardTesti{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:370px;
+    margin-bottom: 60px;
+    width:300px;
+}
+
+/*
+.cardTesti span:nth-child(1){
+    position: absolute;
+    width: 50px;
+    height: 100px;
+    background-color: #388E3C;
+    z-index: 1;
+    transform: rotate(45deg);
+}
+
+.cardTesti span:nth-child(2){
+    position: absolute;
+    width: 60px;
+    height: 120px;
+    background-color: #40BB15;
+}
+
+*/
+
+.cardTesti span:nth-child(1),
+.cardTesti span:nth-child(2),
+.cardTesti span:nth-child(3),
+.cardTesti span:nth-child(4){
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: #388E3C;
+    z-index: 2;
+}
+
+.cardTesti span:nth-child(1){
+    top:10px;
+    right:30px;
+}
+
+.cardTesti span:nth-child(2){
+    bottom:50px;  
+    right:20px;  
+}
+
+.cardTesti span:nth-child(3){
+    bottom:0px;  
+    left:0px;  
+}
+
+.cardTesti span:nth-child(4){
+    top:30px;  
+    left:30px;  
+}
+
+.cardTesti span:nth-child(5){
+    width: 70px;
+    height: 245px;
+    top:41px;  
+    right:25px;  
+    transform: rotate(-2.5deg);
+    position: absolute;
+    z-index: 2;
+    background-color: #388E3C;
+}
+
+.cardTesti span:nth-child(6){
+    width: 70px;
+    height: 275px;
+    top:61px;  
+    left:15px;  
+    transform: rotate(6.3deg);
+    position: absolute;
+    z-index: 2;
+    background-color: #388E3C;
+}
+
+.cardTesti span:nth-child(7){
+    width: 175px;
+    height: 70px;
+    top:20px;  
+    left:61px;  
+    transform: rotate(-6.7deg);
+    position: absolute;
+    z-index: 2;
+    background-color: #388E3C;
+}
+
+.cardTesti span:nth-child(8){
+    width: 220px;
+    height: 70px;
+    bottom:24px;  
+    left:25px;  
+    transform: rotate(-13.5deg);
+    position: absolute;
+    z-index: 2;
+    background-color: #388E3C;
+}
+
+.cardTesti span:nth-child(9){
+    width: 200px;
+    height: 230px;
+    bottom:60px;  
+    left:60px;  
+    position: absolute;
+    z-index: 2;
+    background-color: #388E3C;
+}
+
+.cardTesti span:nth-child(10){
+    width: 70px;
+    height: 70px;
+    bottom:60px;  
+    right:10px;  
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+    background-color: #40BB15;
+}
+
+.cardTesti span:nth-child(11){
+    width: 70px;
+    height: 70px;
+    top:10px;  
+    left:60px;  
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+    background-color: #40BB15;
+}
+
+.cardTesti span:nth-child(12){
+    width: 150px;
+    height: 70px;
+    top:14px;  
+    left:90px;  
+    position: absolute;
+    transform: rotate(3deg);
+    z-index: 1;
+    background-color: #40BB15;
+}
+
+.cardTesti span:nth-child(13){
+    width: 70px;
+    height: 250px;
+    bottom:87px;  
+    right:25px;  
+    position: absolute;
+    transform: rotate(-7deg);
+    z-index: 1;
+    background-color: #40BB15;
+}
+
+.cardTesti div{
+    z-index: 3;
+}
+
+.contenidoTesti{
+    display: block;
+    padding-top: 0px;
+    position: absolute;
+    top: 75px;
+}
+
+.fotoTesti{
+    position: absolute;
+    top:-70px;
+    right:115px;
+    padding-top: 0px;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+
+.nombreTesti{
+    font-size: larger;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+}
+
+.descripcionTesti{
+    font-size: medium;
+    color: rgb(255, 255, 255);
+}
+
+.comillasTesti{
+    margin-top: 5px;
+}
+
+.textoTesti{
+    color:rgb(255, 255, 255);
+    padding-left: 12%;
+    padding-right: 12%;
+    font-size: small;
+}
+
+.estrellasTesti{
+    padding-top: 10px;
+    justify-content: center;
+    display: flex;
+}
+
+
+
+
+/* COMO FUNCIONA*/
+.funciona{
+    padding: 0px 0px;
+    background-color: #f7f7f7;
+    color: #2D9731;
+    display: block;
+    text-align: center;
+    
+    height:520px;
+    width: 100%;
+}
+.containerCardsFunci{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:5%;
+}
+
+
+.cardFunci{
+    width: 250px;
+    height: 320px;
+    border: #d1d1d1 2px solid;
+    border-radius: 5%;
+    margin-left: -55px;
+    margin-right: -55px;
+    margin-top: -50px;
+    margin-bottom: -40px;
+
+}
+
+.cardFunci a{
+    background-color: #388E3C;
+    color:#f7f7f7;
+    width: 20%;
+    margin-left: 5%;
+    font-size: x-small;
+    font-weight: bold;
+    justify-self: flex-end;
+    border-radius: 10%;
+    padding: 5px;
+}
+
+.headerFunci{
+    position: absolute;
+    z-index: 3;
+    color:#388E3C;
+    top: 0px;
+    width: 100%;
+    font-weight: bold;
+    justify-self: center;
+}
+
+.descFunci{
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+    font-weight: normal;
+    color:#388E3C;
+    top: 40px;
+}
+
+.icono-ubicacion {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: red;
+    color: white;
+    text-align: center;
+    font-size: 12px;
+  }
+
+  .pieCardFunci {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+  }
+  
+  .pieCardFunci > div:first-child,
+  .pieCardFunci > div:last-child {
+    width: 50%;
+  }
+
+  .cardFunci h3{
+    padding-bottom: 20px;
+    padding-right: 30px;
+    padding-left: 5px;
+ font-size: small;
+ width: 70%;
+
+ white-space: nowrap;
+ padding-top: 160px;
+
+
+}
+
+.textoFuera {
+
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+    font-weight: normal;
+    color:#388E3C;
+    top: 40px;
+
+
+  }
+
+.textoCardFunci {
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    text-shadow: 0 0 2px #000;
+  
+    margin-left: -80px;
+  }
+
+  .textoCardFunci .iOS {
+        margin-left: -80px;
+    text-align: center;
+    color: #00FF00;
+  }
+.cardFunci h4{
+    padding-bottom: 30px;
+    padding-top: 170px;
+    padding-left: 0px;
+    
+ font-size: small;
+ width: 70%;
+ 
+}
+
+.cardFunci i{
+
+    padding-left: 10px;
+    margin-bottom: 0px;
+}
+
+
+.fas.fa-arrow-circle-right.nueva-clase{
+
+    font-size:36px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.fas.fa-map-marker-alt.bajo-clase{
+    padding-left: 10px;
+    margin-bottom: 0px;
+
+}
+
+.fas.fa-map-marker-alt.bajo-clase{
+    padding-left: 10px;
+    margin-bottom: 0px;
+
+}
+
+
+
+
+.car.fas.fa-arrow-circle-right.nueva-claseds > div {
+    margin: 0 0;
+  }
+
+.cardFunci span{
+
+    padding-left: 80px;
+    padding-bottom: 20px;
+    padding-top: 158px;
+}
+
+
+
+.imgCardFunci{
+    height: 230px;
+    width: 100%;
+    margin-bottom: -155px;
+}
+
+
+
+
+.arriba-clase{
+
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 5px;
+    font-size:36px;
+
+    justify-content: space-between;
+
+  
+}
+
+.arriba-claseds > div {
+    margin: 0 0;
+  }
+
+.btnDescarga{
+    color: #fff;
+    border-radius: 37px;
+    background-color: #2D9731;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    font-size:large;
+    font-weight: 300;
+    padding: 5px;
+    margin-right: 30px;
+ 
+    font-weight: bold;
+       display:inline-block; padding-top: 5px;
+}
+
+.fas.fa-arrow-circle-down.nueva-clase {
+    display: none; 
+    font-size:36px;
+
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 0px;
+    margin-bottom: 60px;
+    /* Mostrar el botón */
+    /* Define tus estilos específicos para cuando la pantalla sea menor de 700px */
+}
+
+.finFunci{
+    position: relative;
+    justify-content: center;
+    justify-items: center;
+    align-content: center;
+    overflow: hidden;
+    margin-bottom: -70px;
+    width: 100%;
+    height:160px;
+}
+@media (max-width: 1000px) {
+
+    .funciona{
+        height:1400px;
+    }
+    .containerCardsFunci{
+        flex-direction: column;
+    }
+
+    .cardFunci{
+   
+        margin-bottom: 15px;
+    }
+    .finFunci{
+        margin-bottom: -30px;
+    }
+
+    .fas.fa-arrow-circle-right.nueva-clase{
+        display: none;
+   }
+
+ 
+   .fas.fa-arrow-circle-down.nueva-clase {
+    display: flex; /* Mostrar el botón */
+    /* Define tus estilos específicos para cuando la pantalla sea menor de 700px */
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+/* CARACTERISTICAS Y BENEFICIOS*/
+
+
+.caracBenef{
+    background-color: #388E3C;
+    width: 100%;
+    height: 400px;
+    padding: 0px;
+    display: block;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.caracBenef h2{
+    color:#f7f7f7;
+    font-weight: bold;
+    text-justify: center;
+    text-align: center;
+}
+
+.caracBenef a{
+    position: absolute;
+    background-color: #40BB15;
+    padding: 10px 20px 10px 20px;
+    border-radius: 15%;
+    color:#f7f7f7;
+    font-weight: bold;
+    text-align: center;
+    left:46%;
+    top:55px;
+}
+
+.imgFondoCarac{
+    width: 100%;
+    height: 70%;
+    left: 0px;
+    top: 100px;
+}
+
+.containerImgsCarac{
+    display: flex;
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    /*
+    align-content: center;
+    */
+    justify-content: center;
+    height: 120px;
+    gap:5%;
+}
+
+.textoCaracBenef{
+    position: absolute;
+    text-align: center;
+    text-justify: center;
+    width: 100%;
+    padding: 0px 10% 0px 10%;
+    top:150px;
+    color:#f7f7f7;
+    font-weight: bold;
+    font-size: larger;
+    text-decoration: solid;
+    -webkit-text-stroke: 0.5px black;
+}
+
+.cardCarac{
+    width: 15%;
+    position: relative;
+}
+
+.imgCardCarac{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 10px;
+}
+
+.cardCarac h4{
+    position: absolute;
+    margin-top: 0px;
+    font-size: large;
+    margin-bottom: 0px;
+    color: #f7f7f7;
+    text-align: center;
+    text-shadow: 0 0 3px #000;
+    width: 100%;
+}
+
+.cardCarac h4:nth-child(1){
+    top: 30px;
+}
+
+.cardCarac h4:nth-child(2){
+    bottom: 10px;
+}
+
+.cardCarac div{
+    position: absolute;
+    color: #f7f7f7;
+    font-size: large;
+    font-weight: bold;
+    text-align: center;
+    width: 100%;
+    top:40%;
+}
+
+@media (max-width: 800px) {
+    .containerImgsCarac {
+        flex-direction: column;
+        bottom: 20px;
+        height: 480px;
+    }
+
+    .cardCarac{
+        width: 60%;
+        left:20%;
+        height: 120px;
+    }
+
+    .caracBenef{
+        height: 800px;
+    }
+
+    .caracBenef a{
+        left: 40%;
+    }
+
+    .imgFondoCarac{
+        height: 50%;
+    }
+}
+
+
